RC1: Final stable release
- Rule-first reasoning architecture
- Hybrid Graph Retrieval (Keyword + Vector + Neo4j)
- Deterministic knowledge engine
- Runtime verification completed
- Graph reasoning validated
- RC1 baseline before RC2 platform redesign

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>